fix: fixed styles on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 .app-container{
@@ -9,11 +10,11 @@
   height: 90%;
   flex-direction: column;
   app-navbar{
-    height: 10%;
+    height: 10dvh;
   }
   app-terminal-container {
     display: flex;
     width: 100%;
-    height: 90%;
+    height: 90dvh;
   }
 }
